[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
keywords = ["regex", "parse"]
license = "MIT"
name = "re-parse-macros"
version = "0.1.0"
repository = "https://github.com/kardeiz/re-parse"
readme = "../README.md"

[dependencies]
proc-macro2 = "0.4.23"
quote = "0.6.10"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "0.15.18"

[lib]
proc-macro = true
